Enhance configuration and deployment: - Update API_BASE_URL to use environment variable with fallback - Refactor Dockerfile for multi-stage build to optimize image size - Modify render.yaml for improved database path and disk configuration - Adjust gunicorn settings for better performance and memory management - Update Flask app to handle CORS for specific origins and ensure database persistence

--- a/deployment/render.yaml
+++ b/deployment/render.yaml
@@ -1,14 +1,18 @@
 services:
-  - name: waf-app  # Change this to your app name
+  - name: waf-app
     type: web
-    runtime: docker  # Since you are using Docker
-    repo: https://github.com/shyampillai07/WAF_Project  # Replace with your GitHub repo URL
-    branch: main  # The branch to deploy from
-    plan: free  # Change if you are using a paid plan
+    runtime: docker
+    repo: https://github.com/shyampillai07/WAF_Project
+    branch: main
+    plan: free
     envVars:
       - key: PORT
-        value: 5000  # Flask typically runs on port 5000
+        value: 5000
       - key: DATABASE_URL
-        value: "sqlite:///database/waf_logs.db"  # Change if using a different database
+        value: "sqlite:////opt/render/database/waf_logs.db"
+    disk:
+      name: waf-data
+      mountPath: /opt/render/database
+      sizeGB: 1
     healthCheckPath: "/"
-    autoDeploy: true  # Automatically redeploy when pushing new commits
+    autoDeploy: true
