--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://shyam07:Shyam%40712@cluster0.vc9km.mongodb.net/?retryWrites=true&w=majority&tls=true&appName=Cluster0
+MONGO_URI="mongodb+srv://shyam07:Shyam%40712@cluster0.vc9km.mongodb.net/?retryWrites=true&w=majority&tls=true&appName=Cluster0"
