--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,15 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "postcss": "^8.4.31",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
+    "resolve-url-loader": "^5.0.0",
     "sass": "^1.85.1",
+    "tailwindcss": "^4.0.17",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
